syntax = "proto3";

package bytebase.store;

import "store/advice.proto";
import "store/changelog.proto";
import "store/common.proto";

option go_package = "generated-go/store";

message PlanCheckRunConfig {
  int32 sheet_uid = 1;
  ChangeDatabaseType change_database_type = 2;
  string instance_id = 3;
  string database_name = 4;

  map<string, string> ghost_flags = 6;

  // If set, a backup of the modified data will be created automatically before any changes are applied.
  bool enable_prior_backup = 7;

  // ChangeDatabaseType extends MigrationType with additional execution contexts.
  // Note: DDL, DML, and DDL_GHOST values align with MigrationType enum values.
  enum ChangeDatabaseType {
    CHANGE_DATABASE_TYPE_UNSPECIFIED = 0;
    DDL = 1;
    DML = 2;
    SDL = 3;
    DDL_GHOST = 4;
  }
}

message PlanCheckRunResult {
  repeated Result results = 1;
  string error = 2;

  message Result {
    Advice.Status status = 1;
    string title = 2;
    string content = 3;
    int32 code = 4;

    oneof report {
      SqlSummaryReport sql_summary_report = 5;
      SqlReviewReport sql_review_report = 6;
    }
    message SqlSummaryReport {
      reserved 1;

      // statement_types are the types of statements found in the SQL.
      repeated string statement_types = 2;
      int64 affected_rows = 3;
      ChangedResources changed_resources = 4;
    }
    message SqlReviewReport {
      reserved 1, 2, 3, 4;

      // Position of the SQL statement.
      Position start_position = 8;
      Position end_position = 9;
    }
  }
}
